// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wait spinner renders the spinner with children 1`] = `
.c1 {
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
  -webkit-animation: spin 1s infinite;
  animation: spin 1s infinite;
}

.c0 {
  height: 100%;
  width: 100%;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 .spinner-children {
  display: block;
  color: #000000;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="spinner-children"
    >
      Spinning message
    </div>
  </div>
</div>
`;

exports[`Wait spinner renders the spinner without children 1`] = `
.c1 {
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
  -webkit-animation: spin 1s infinite;
  animation: spin 1s infinite;
}

.c0 {
  height: 100%;
  width: 100%;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 .spinner-children {
  display: block;
  color: #000000;
}

<div
  className="c0"
>
  <div
    className="c1"
  />
</div>
`;
